<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiaoFan_01</string>
    <string name="hello_world">Hello world!</string>
    <string name="not_yet">暂时未开放此功能，敬请期待</string>
    <string name="sure"> &#160; &#160;确   &#160;&#160; 定 &#160;</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_post">EditPostActivity</string>
    <string name="title_activity_edit">编辑需求</string>
    <string name="fromPoster">来自 </string>
    <string name="add_post_title">编辑帖子</string>

    <!-- 编辑需求帖子 -->
    <string name="post_name">帖子标题</string>
    <string name="post_desc">具体描述</string>
    <string name="remark">优选</string>
    <string name="init_price">赏金</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="contact">联系方式</string>
    <string name="anonymous">匿名发布</string>
    <string name="invite">邀请好友</string>
    <string name="needwall">发布至需求墙</string>
    <string name="payment1">报酬</string>
    <!-- 编辑需求顶端5个选项 -->
    <string name="post_kind">类别</string>
    <string name="payment">报酬方式</string>
    <string name="support_need">供 ？求</string>
    <string name="location">地理位置</string>
    <string name="avail_time">有效时间</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="reset">重新选择</string>
    <string name="selfDef">手动定位</string>
    <string name="title_activity_picture">Picture</string>
    <string name="title_activity_popup_windows">PopupWindows</string>
    <string name="title_activity_edit_post_fragment">EditPostFragment</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_post_fragment">PostFragment</string>

</resources>
