<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/common_bg"
    
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/blue"
        android:gravity="center_vertical" >
        
       <LinearLayout
            android:id="@+id/bnCancel"
            android:layout_width="45dip"
            android:layout_height="match_parent"
            android:background="@drawable/common_tab_bg"
            android:clickable="true"
           
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="11dp"
                android:adjustViewBounds="true"
                android:src="@drawable/mm_title_back" />
        </LinearLayout>
        <TextView
            android:id="@+id/message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
             android:layout_centerInParent="true"
            android:layout_gravity="center_vertical" 
            android:text="编辑帖子"
            android:textColor="#fff"
            android:textSize="18sp" />
       
        
     <LinearLayout  
            android:id="@+id/bnAdd"
		    android:layout_width="100dip"
		    android:layout_height="match_parent"
		    android:background="@drawable/common_tab_bg"
		    android:clickable="true"
		    android:orientation="horizontal" 
		    android:gravity="center_horizontal"
		    android:layout_alignParentRight="true"
		    android:onClick="pengpeng" > 
		      <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical" 
		        android:layout_marginRight="10dp"  
		        android:textColor="#2d2d2d" 
		        android:text="|" />
	       	 <TextView
	       	   
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical" 
		        android:layout_marginRight="5dp"  
		        android:layout_centerVertical="true"
		        android:textColor="#fff" 
		       android:text="发布" />
		</LinearLayout>
	 </RelativeLayout>

<GridLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:columnCount="5"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="11"
    tools:context="com.example.liaofan_01.EditPostActivity$PlaceholderFragment" >

    <!--  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        
        android:layout_columnSpan="5"
        android:layout_row="0" >
        <TextView
         android:id="@+id/post_kind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000" 
        android:text="@string/post_kind" />



    <TextView
         android:id="@+id/payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000" 
        android:text="@string/payment" />

    <TextView
         android:id="@+id/support_need"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="#000" 
        android:text="@string/support_need" />

    <TextView
         android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="#000" 
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/location" />

    <TextView
         android:id="@+id/avail_time"
        android:layout_width="0dp"
        android:textColor="#000" 
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/avail_time" />
    </LinearLayout>
    

    <!-- 输入标题的行 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:textColor="#000" 
        android:text="@string/post_name"
        android:textSize="@dimen/label_font_size" />

    <EditText
        android:id="@+id/itemName"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:textSize="@dimen/label_font_size"
        android:inputType="text" />

    <!-- 输入标签的行 -->

    <TextView
        android:id="@+id/itemRemark0"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:textColor="#000" 
        android:layout_columnSpan="1"
        android:layout_row="2"
        
        android:gravity="end"
        android:text="@string/remark"
        android:textSize="@dimen/label_font_size" />

    <EditText
        android:id="@+id/itemRemark"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:textSize="@dimen/label_font_size"
        android:inputType="text" />
    <!-- 报酬方式 -->
 <LinearLayout
        android:id="@+id/payment1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_columnSpan="5"
        android:layout_row="3" >
    <TextView
        android:layout_width="60dp"
        android:layout_height="40sp"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:gravity="end"
        android:textColor="#000" 
        android:text="@string/payment1"
        android:textSize="@dimen/label_font_size" />
          <CheckBox
            android:id="@+id/money"
            android:textColor="#000" 
            android:layout_marginLeft="20sp"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
             style="@style/CustomCheckboxTheme"
            android:text="钱"
            android:gravity="center"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/products"
            android:textColor="#000" 
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:text="物"
            android:layout_marginLeft="25sp"
             style="@style/CustomCheckboxTheme"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/services"
            android:textColor="#000" 
            android:layout_marginLeft="25sp"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:text="服务"
            android:gravity="center"
            style="@style/CustomCheckboxTheme"
            android:textSize="16sp" />
    
    </LinearLayout>
    
    <!-- 输入电话 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="4"
        android:textColor="#000" 
        android:text="@string/contact"
        android:textSize="@dimen/label_font_size" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4"
        android:textSize="@dimen/label_font_size"
        android:inputType="numberDecimal" />
    
    
    <!-- 输入帖子描述的行 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="5"
        android:layout_rowSpan="4"
        android:textColor="#000" 
        android:text="@string/post_desc"
        android:textSize="@dimen/label_font_size" />

    <EditText
        android:id="@+id/itemDesc"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:layout_row="5"
        android:layout_rowSpan="4"
        android:gravity="top"
        android:hint="添加对标题的描述..."
        android:inputType="textMultiLine"
        android:lines="10"
        android:textSize="@dimen/label_font_size"
        android:minHeight="30dip"
        android:minLines="6" />

    <!--
输入赏金的行
<TableRow>
<TextView
	android:text="@string/init_price"
	android:textSize="@dimen/label_font_size"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"/>
<EditText
	android:id="@+id/initPrice"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:inputType="numberDecimal"/>
</TableRow>
    -->
    <!--
选择有效时间的行
<TableRow>
<TextView
	android:text="@string/avail_time"
	android:textSize="@dimen/label_font_size"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"/>
<Spinner
	android:id="@+id/availTime"
	android:layout_width="match_parent" 
	android:layout_height="wrap_content"
	android:entries="@array/availTime"/>
</TableRow>
    -->


    <!-- 定义按钮的行 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:layout_row="10"
        android:textColor="#000" 
        android:layout_height="45sp"
        android:gravity="end" >

        <CheckBox
            android:id="@+id/checkbox1"
            style="@style/CustomCheckboxTheme"
            android:layout_width="wrap_content"
            android:textColor="#000" 
            android:layout_height="45sp"
            android:text="@string/anonymous"
             />

        <CheckBox
            android:id="@+id/checkbox2"
            android:textColor="#000" 
            android:layout_width="wrap_content"
            android:layout_height="45sp"
            android:text="@string/invite"
             style="@style/CustomCheckboxTheme"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox3"
            android:textColor="#000" 
            android:layout_width="wrap_content"
            android:layout_height="45sp"
            android:text="@string/needwall"
             style="@style/CustomCheckboxTheme"
            android:textSize="16sp" />
    </LinearLayout>
   </GridLayout>
   <!--   <Button
        
        android:layout_width="80dp"
        android:layout_height="45dp"
       
        android:text="@string/add" />

    <Button
        
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_column="3"
        android:layout_columnSpan="2"
        android:layout_row="11"
        android:text="@string/cancel" />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_column="0"
    android:layout_columnSpan="5"
    android:layout_gravity="fill_vertical"
    android:layout_row="11"
    android:gravity="end"
    android:orientation="vertical" >
    </LinearLayout>
-->
	<!-- 照片合集 -->

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="#eef1eff5" 
          
         
          android:orientation="horizontal">
  		<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="left"
        android:layout_weight="1"
        android:padding="10.0dp" 
        android:textColor="#5f5f5f"
        android:text="最多可上传3张图片"
        android:textSize="12.0sp" />
  		<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="right"
        android:text="剩余"
        android:textColor="#5f5f5f"
        android:textSize="12.0sp" />
      <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="right"
        android:text="140"
        android:textColor="#5f5f5f"
        android:textSize="12.0sp" />
      <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:gravity="right"
        android:text="字"
        android:textColor="#5f5f5f"
        android:textSize="12.0sp" />
     </LinearLayout>
	<!-- 照片合集 -->
      <LinearLayout
          android:id="@+id/pic_add"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          
          android:background="#dadfe6" >

          <HorizontalScrollView
              android:id="@+id/selectimg_horizontalScrollView"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="10dp"
              android:paddingRight="10dp" >

              <LinearLayout
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="horizontal" >

                  <GridView
                      android:id="@+id/noScrollgridview"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:fastScrollEnabled="true"
                      android:focusable="true"
                      android:gravity="center"
                      android:horizontalSpacing="0dp"
                      android:scrollbars="none"
                      android:scrollingCache="false"
                      android:stretchMode="spacingWidthUniform"
                      android:verticalSpacing="1dp"
                      android:numColumns="4" >
                  </GridView>
              </LinearLayout>
          	</HorizontalScrollView>
      	</LinearLayout>
	<!-- 动态填充剩余空白 
	<View 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="#dadfe6"
	    />
-->

</LinearLayout>