<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.liaofan_01.KindManage.LocationActivity" >
    
   <LinearLayout
       android:id="@+id/toplinear"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:background="#000000"
       android:orientation="horizontal" >

       <TextView
           android:id="@+id/log1"
            android:background="#ffffff"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="0.26"
            android:textSize="15sp"
           android:text="经度" />

       <TextView
           android:id="@+id/log"
           android:textSize="15sp"
            android:background="#ffffff"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="0.44"
           android:editable="false"
           android:text="log" />

       <TextView
           android:id="@+id/lat1"
           android:textSize="15dp"
            android:background="#ffffff"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="0.15"
           android:text="纬度" />

       <TextView
           android:background="#ffffff"
           android:id="@+id/lat"
           android:textSize="15sp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="0.50"
           android:editable="false"
           android:text="lat" />

   </LinearLayout>
  
      <TextView
        android:id="@+id/tap_text"
        android:textSize="15sp"
        android:visibility="gone"
        android:background="#ffffff"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toplinear"
        android:text="tap_instructions" />
      
    <com.amap.api.maps2d.MapView 
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/map"
   android:layout_below="@+id/tap_text"
   android:layout_width="fill_parent"
   android:clickable="true" 
   android:layout_height="380dp" />

    <LinearLayout
       android:textSize="15sp"
       android:id="@+id/centerLinear"
       android:layout_below="@+id/map"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"      
       android:orientation="horizontal"
        >
    <Button
        android:id="@+id/back"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
     	android:layout_marginTop="5dp"
        android:text="@string/sure" />
    
     <Button
        android:id="@+id/selfDef"
        android:textSize="15sp"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:visibility="gone" 
   		android:layout_below="@+id/map"
   		android:layout_marginTop="5dp"
        android:layout_marginBottom="7dp"
        android:layout_marginRight="60dp"        
        android:text="@string/selfDef" />
     
    <LinearLayout
       android:textSize="15sp"
       android:id="@+id/bottomLinear"
      
       android:layout_width="fill_parent"
       android:layout_height="wrap_content" 
       android:visibility="gone"     
       android:orientation="vertical"
       >
    
   
    <Button
        android:id="@+id/reset"
        android:layout_width="90dp"
 
     	android:layout_height="45dp"
        android:layout_marginBottom="7dp"
       
        android:textSize="15sp"
        android:text="@string/reset" />
    

     </LinearLayout>
</LinearLayout>
<!--  
 <TextView
        android:id="@+id/mark_listenter_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="拖动marker1" />-->
   
</RelativeLayout>